# void-server

./: .env  .gitignore  Cargo.toml  README.md
assets/: downloader.js
sql/: create_group.sql  delete_group_member.sql  get_user_by_id.sql  get_user_by_username.sql  get_user_pass.sql  get_user_uuid.sql  insert_if_need_refresh_token.sql  insert_refresh_tokens.sql  refresh_token.sql  token_revoke_refresh.sql
src/: commands.rs  main.rs
src/commands/auth/: jwt.rs  mod.rs  routes.rs
src/commands/database/entities/: config.rs  entity_errors.rs  entity_groups.rs  entity_users.rs  mod.rs  models.rs
src/commands/database/sql/: create_group.sql  create_group_member.sql  create_user.sql  get_user_role.sql
src/commands/fileserver/: mod.rs
static/test/: test.txt
