[package]
name = "void_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["macros"] }
actix-cors = "0.7.1"
actix-rt = "2.0"
actix-multipart = "0.7.2"
confik = "0.14.0"
dotenvy = "0.15.7"
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
serde = "1.0.219"
serde_json = "1.0.142"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
pgdatetime = "0.3.0"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
derive_more = "2.0.1"
chrono = { version = "0.4", features = ["serde"] } 
log = "0.4"
env_logger = "0.11.8"
actix-files = "0.6.6"
zip = "3.0.0" #DO NOT TOUCH
zip-extensions = "0.8.3"
walkdir = "2.5.0"
num_cpus = "1.17.0"
futures = "0.3.30"
sha2 = "0.10.8"
tokio = { version = "1.47.1", features = ["full"] }
rayon = "1.10.0"
tar = "0.4.41"
argon2 = "0.5.3"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
postgres-types = "0.2.9"
rand = "0.9.2"
thiserror = "2.0.15"
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
actix-web-httpauth = "0.8"
time = { version = "0.3", features = ["macros", "formatting"] }
tokio-stream = "0.1.17"